bright: fix mute modal dropdown contrast

--- a/app/javascript/styles/chitter-bright.scss
+++ b/app/javascript/styles/chitter-bright.scss
@@ -269,6 +269,10 @@ $ui-inverted-highlight-color: $ui-highlight-color;
 	color: black;
 }
 
+.mute-modal__container select {
+	color: black;
+}
+
 .status-check-box {
   border-bottom-color: rgba(255,255,255,0.3);
 }
